test/arguments/with_python_properties/zs/errors/structure_function_property_clash_error.zs
package errors.structure_function_property_clash_error;

struct TestStructure
{
    string funcTest; // clashes with generated function method

    function bool test()
    {
        return true;
    }
};
